dnl Process this file with autoconf to produce a configure script.
dnl
AC_INIT(main.cc)

AC_CONFIG_HEADER(autoconf.h)

V_PROG="nam"
V_ALL="$V_PROG"
V_SHM="-DUSE_SHM"
V_LIB=""
V_SHELL=""

AC_HEADER_STDC

builtin(include, ./conf/configure.in.fns)

builtin(include, ./conf/configure.in.head)
builtin(include, ./conf/configure.in.misc)
builtin(include, ./conf/configure.in.z)
builtin(include, ./conf/configure.in.x11)
builtin(include, ./conf/configure.in.tcl)
builtin(include, ./conf/configure.in.tk)
builtin(include, ./conf/configure.in.tcldebug)
builtin(include, ./conf/configure.in.otcl)
builtin(include, ./conf/configure.in.TclCL)

dnl
dnl figure out random return type
dnl
AC_MSG_CHECKING(return type of random)
touch confdefs.h
AC_TRY_RUN([#include <stdlib.h>
#include "confdefs.h"
long random() { return 1; }
main() { exit(0); }
],
AC_MSG_RESULT(long)
AC_DEFINE(RANDOM_RETURN_TYPE,long)
,
AC_MSG_RESULT(int)
AC_DEFINE(RANDOM_RETURN_TYPE,int)
,
AC_MSG_RESULT(cross compiling--guessing int)
AC_DEFINE(RANDOM_RETURN_TYPE,int)
)

dnl
dnl check some types
dnl
AC_CHECK_TYPE(int8_t,signed char)
AC_CHECK_TYPE(int16_t,short)
AC_CHECK_TYPE(int32_t,int)
AC_CHECK_TYPE(u_int8_t,unsigned char)
AC_CHECK_TYPE(u_int16_t,unsigned short)
AC_CHECK_TYPE(u_int32_t,unsigned int)

builtin(include, ./conf/configure.in.int64_t)

AC_CHECK_FUNCS(snprintf)

NS_FNS_TAIL
builtin(include, ./conf/configure.in.tail)
